[package]
name = "lsp_doc"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Embed markdown/text files into Rust documentation attributes for LSP hover/preview"
repository = "https://github.com/MasterTemple/lsp_doc/"
readme = "README.md"
keywords = ["lsp", "doc"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
lsp_doc = { path = "." }
